# mitsuba-data

./: .gitignore
common/meshes/: bunny_watertight.ply  curve.txt  curve_6.txt  curve_doc.txt
docs/scenes/: bsdf_blendbsdf.xml  bsdf_conductor_aluminium.xml  bsdf_conductor_gold.xml  bsdf_dielectric_diamond.xml  bsdf_diffuse_textured.exr  bsdf_hair_blonde.xml  bsdf_hair_brown.xml  bsdf_mask_after.xml  bsdf_mask_before.xml  bsdf_measured_polarized_fakegold.xml  bsdf_measured_polarized_fakegold_stokes.xml  bsdf_measured_polarized_gold.xml  bsdf_measured_polarized_gold_stokes.xml  bsdf_plastic_diffuse.xml  bsdf_plastic_nopreserve.xml  bsdf_plastic_preserve.xml  bsdf_pplastic.xml  bsdf_pplastic_diffuse.xml  bsdf_pplastic_diffuse_stokes.xml  bsdf_pplastic_specular.xml  bsdf_pplastic_specular_stokes.xml  bsdf_roughconductor_anisotropic_aluminium.xml  bsdf_roughconductor_copper.xml  bsdf_roughplastic_beckmann.xml  bsdf_roughplastic_ggx.xml  bsdf_roughplastic_nopreserve.xml  bsdf_roughplastic_preserve.xml  emitter_spot_no_texture.xml  emitter_spot_texture.xml  generate_instance_fractal.py  generate_volume_grids.py  integrator_aov_depth.xml  integrator_aov_position.xml  integrator_aov_sh_normal.exr  integrator_aov_sh_normal.xml  (+40 more)
ply/: teapot-n.ply
scenes/: .gitignore  flat-torus.ply  hello.xml  ico.ply  ico.xml  mitsuba-text.exr  mitsuba-text.ply  mitsuba-text.xml  plane.ply  planes.xml  sphere-source.xml
sunsky/: LICENSE
sunsky/generation/: CMakeLists.txt  convert_tgmm_tables.py  generate_irradiance_data.py  warps.ipynb
sunsky/generation/src/: main.cpp
(+729 files in other folders)
